@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.1.3 - not released yet
+	* Bugfix: Cropping of tabs didn't work correctly in ie. Due to substr(negativeValue)
 	* Added: Cropping for database relation labels in form
 	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
 	* Added TodoyuTime::time() to set null values to current time
